git add dom-manipulation

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Quote Generator</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      background: #f4f4f4;
+    }
+    h1 {
+      text-align: center;
+    }
+    #quoteDisplay {
+      margin: 2rem auto;
+      padding: 1rem;
+      max-width: 600px;
+      background: #fff;
+      border-radius: 8px;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .controls {
+      text-align: center;
+      margin-top: 2rem;
+    }
+    input {
+      margin: 0.5rem;
+      padding: 0.5rem;
+    }
+    button {
+      padding: 0.5rem 1rem;
+      margin-top: 1rem;
+      cursor: pointer;
+    }
+  </style>
+  
+  
   </head>
   <body>
     <h1>Dynamic Quote Generator</h1>
-    <div id="quoteDisplay"></div>
-    <button id="newQuote">Show New Quote</button>
+    <div id="quoteDisplay">Click "Show New Quote" to begin</div>
+    <div class="controls">
+     <button id="newQuote">Show New Quote</button> 
+    </div>
+
+    <div class="controls">
+      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+      <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+      <button onclick="addQuote()">Add Quote</button>
+    </div>
     <script src="script.js"></script>
   </body>
   </html>
