--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -51,6 +51,11 @@
       <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
       <button onclick="addQuote()">Add Quote</button>
     </div>
+
+    <div>
+      <button onclick="exportToJsonFile()">Export Quotes</button>
+      <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+    </div>
     <script src="script.js"></script>
   </body>
   </html>
